src/tests/snapshots/tera__tests__parser__parser_errors@unexpected_token_macro_def_args.txt.snap
---
source: src/tests/parser.rs
expression: res.unwrap_err()
input_file: src/tests/parser_inputs/errors/unexpected_token_macro_def_args.txt
---
 Syntax error --> [unexpected_token_macro_def_args.txt:1:17]
  |
1 | {% macro hello(a=b) %}{% endmacro %}
  |                  ^---
  = Found identifier but macro default arguments can only be one of: string, bool, integer, float
        
